--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.16.1",
     "express-react-views": "^0.11.0",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
