conclusão das funcionalidades de todas as telas

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,18 @@
 USER=[Insira um nome de usuário]
 USER=[Insira uma senha para login]
 SECRET=[Insira uma palavra para gerar o token]
+
+HOSTMAIL = [Configuração smtp do seu servidor de email]
+MAILPORT = [Porta smtp do seu servidor de email]
+MAILSSL = [Uso de SSL/TLS na criptografia de email]
+USERMAIL = [Seu usuário de email]
+PASSMAIL = [Senha do seu email]
+
+Para usar o email do google primeiro será preciso habilitar o acesso de aps menos seguros e também após o primeiro envio de email será necessário fazer a liberação da verficação do acesso para utilizar o recurso de envio de email pelo gmail
+Recomenda também que utilize a criptografia SSL e a porta 465 conforme orientação do próprio google
+
+HOME_NAME = [Nome para o menu de Home]
+DESCRIPTION_NAME = [Nome para o menu de Descrição]
+PEOPLE_NAME = [Nome para o menu de Pessoas]
+CONTACT_NAME = [Nome para o menu de Contatos]
+TECHNOLOGIES_NAME = [Nome para o menu de Tecnologias]
