--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.7.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
   }
