--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "nodemailer": "^6.7.1",
+    "nodemon": "^2.0.13",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
   }
